--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "antd": "^3.26.5",
     "axios": "^0.19.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "react": "^16.9.0",
